--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "stream-transform": "0.1.x"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5",
-    "node-inspector": "^0.12.6"
+    "chai": "3.x.x",
+    "mocha": "2.x.x",
+    "node-inspector": "0.12.x"
   }
 }
