--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ node_js:
   - "0.11"
   - "0.10"
 before_install:
-  - pip install codecov
+  - pip install --user codecov
 after_success:
   - codecov
