--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
   - "0.11"
   - "0.10"
 before_install:
-  - npm install codecov
+  - npm install codecov istanbul
 after_success:
+  - node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec
   - node_modules/.bin/codecov
