--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,13 @@ node_js:
   - "0.12"
   - "0.11"
   - "0.10"
+script:
+  nv=$(node -v);
+  if [[ $nv > '0.12' ]] ; then
+    npm test;
+  else
+    npm run test-0.10;
+  fi
 before_install:
   - npm install codecov
 after_success:
