--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ node_js:
   - "0.11"
   - "0.10"
 script:
-  nv=$(node -v);
-  echo $nv;
-  if [[ $nv > '0.12' ]] ; then
+  if [[ $(node -v) > 'v0.13' ]] ; then
     echo "test";
     npm test;
   else
